# gtk

./: .gitignore  Cargo.toml  README.md  lib.rs  main.rs  prova.glade  test.glade  ui.glade
src/: lib.rs  main.rs  prova.glade  prova.rs  ui.glade
