[package]
name = "gtk_plotter"
version = "0.1.0"
authors = ["Dao Simone", "Sabel Petr"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = "0.15.11"
gtk = "0.15.5"
gio = "0.15.11"
minifb = "0.23.0"
chrono = "0.4.23"
colorous = "1.0.9"
plotters-cairo = "0.3.1"
rand = "0.8.5"
plotters = "0.3.1"
#plot_graph = {git = "https://github.com/Giacomo-Sanna/plot_graph.git"}
plot_graph = { path = "../plot_graph" }
market_common = { version = "1.0.10", registry = "kellnr", package = "unitn_market_2022" }
